--- a/src/components/header/style.less
+++ b/src/components/header/style.less
@@ -91,11 +91,11 @@
         display: none;
         position: absolute;
         right:0;
-        min-width: 150px;
+        min-width: 200px;
         background-color: @mainBackground;
         border-radius: 5px;
         box-shadow: 0 0 3px 0 @mainBorderColor;
-        padding: 10px;
+        padding: 20px 10px;
         z-index: 2;
         margin-top: 10px;
         
@@ -103,6 +103,7 @@
             height: 40px;
             display: block;
             font-size: 1em;
+            margin-right: 0;
         }
 
         &::before {
@@ -121,6 +122,11 @@
             display: flex;
             justify-content: space-between;
           }
+        }
+
+        .nav-span-switch {
+          display: flex;
+          justify-content: space-between;
         }
       }
     }
